fix(print): tabs sometimes visible

--- a/src/public/stylesheets/print.css
+++ b/src/public/stylesheets/print.css
@@ -6,6 +6,7 @@
 .no-print,
 .no-print *,
 .tab-row-container,
+.tab-row-widget,
 #launcher-pane,
 #left-pane,
 #right-pane,
